Çevirinin Yapılması Tamamlandı

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <select name="" id="from-lang"></select>
     <select name="" id="to-lang"></select>
 
+<div class="text-control">
+    <textarea  id="from-text" class="from-text" placeholder="Metin Girin"></textarea>
+    <textarea  id="to-text" class="to-text" placeholder="Çeviri" readonly disabled></textarea>
+</div>
 
-
-
+<button id="btnTranslate">Çevir</button>
 
     <script src="languages.js"></script>
     <script src="script.js"></script>
