--- a/index.html
+++ b/index.html
@@ -4,19 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>Translater App</title>
 </head>
 <body>
+    <div class="container">
+        <div class="box">
+            <ul class="controls">
+                <li class="left">
+                    <select name="" id="from-lang"></select>
+                </li>
+                <li class="exchange"><i class="fas fa-exchange-alt"></i></li>
+                <li class="right">
+                    <select name="" id="to-lang"></select>
+                </li>
+            </ul>
+            <div class="text-controls">
+                <textarea  id="from-text" class="from-text" placeholder="Metin Girin"></textarea>
+                <textarea  id="to-text" class="to-text" placeholder="Çeviri" readonly disabled></textarea>
+            </div>
+        </div>
+        <button id="btnTranslate">Çevir</button>
+    </div>
+
+
     
-    <select name="" id="from-lang"></select>
-    <select name="" id="to-lang"></select>
+    
 
-<div class="text-control">
-    <textarea  id="from-text" class="from-text" placeholder="Metin Girin"></textarea>
-    <textarea  id="to-text" class="to-text" placeholder="Çeviri" readonly disabled></textarea>
-</div>
 
-<button id="btnTranslate">Çevir</button>
+
+
 
     <script src="languages.js"></script>
     <script src="script.js"></script>
