--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
         <div class="box">
             <ul class="controls">
                 <li class="left">
+                    <div class="icons">
+                        <i id="from" class="fas fa-volume-up"></i>
+                        <i id="from" class="fas fa-copy"></i>
+                    </div>
                     <select name="" id="from-lang"></select>
                 </li>
                 <li class="exchange"><i class="fas fa-exchange-alt"></i></li>
                 <li class="right">
+                    <div class="icons">
+                        <i id="to" class="fas fa-volume-up"></i>
+                        <i id="to" class="fas fa-copy"></i>
+                    </div>
                     <select name="" id="to-lang"></select>
                 </li>
             </ul>
